Fixes bug where repository changes search would overflow box

--- a/front/src/repository/repositoryChanges/repositoryChanges.less
+++ b/front/src/repository/repositoryChanges/repositoryChanges.less
@@ -88,13 +88,14 @@
 
 				input {
 					position: absolute;
-					top: 0px;
+					top: 0;
 					left: @imageWidth + 8;
-					right: 0px;
-					bottom: 0px;
-
-					margin: 0px;
-					padding: 0px;
+					right: 0;
+					bottom: 0;
+					margin: 0;
+					padding: 0;
+					width: auto;
+					height: auto;
 					border: none;
 					background-color: rgba(0, 0, 0, 0.0);
 
